# mocap

./: README.md
projet/: CMakeLists.txt  README.txt
projet/src/: export.cpp  export.cpp~  export.h  export.h~  main.cpp  scene.cpp  scene.cpp~  scene.h  skel.cpp  skel.cpp~  skel.h  skel.h~
projet/src/math/: Mat4.h  Mat4.h~  Quaternion.h  Quaternion.h~  Vec.h  Vec2.h  Vec3.h  Vec3.h~  Vec4.h
