
PROJECT(MOCAP)

############################## LES OPTIONS
SET( CMAKE_BUILD_TYPE Debug)			# used only by make
#SET( CMAKE_BUILD_TYPE RelWithDebInfo)
#SET( CMAKE_BUILD_TYPE Release)


cmake_minimum_required(VERSION 2.4)
if(COMMAND cmake_policy)
      cmake_policy(SET CMP0003 NEW)
endif(COMMAND cmake_policy)

###### Dependencies
SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/")

FIND_PATH(OPEN_NI_INCLUDE "XnOpenNI.h" "OpenNIConfig.h" "XnCodecIDs.h" "XnCppWrapper.h" "XnPropNames.h" HINTS "$ENV{OPEN_NI_INCLUDE}" "/usr/include/ni" "/usr/include/openni")
FIND_LIBRARY(OPEN_NI_LIBRARY NAMES OpenNI libOpenNI HINTS $ENV{OPEN_NI_LIB} "/usr/lib")
LINK_DIRECTORIES($ENV{OPEN_NI_LIB})
INCLUDE_DIRECTORIES(${OPEN_NI_INCLUDE})
LINK_LIBRARIES(${OPEN_NI_LIBRARY})



######## OPENGL
FIND_PACKAGE(OpenGL REQUIRED)
MESSAGE(STATUS "OPENGL_FOUND=${OPENGL_FOUND}")
INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR})
   MESSAGE( STATUS "    OPENGL_INCLUDE_DIR=${OPENGL_INCLUDE_DIR}" )
   MESSAGE( STATUS "    OPENGL_LIBRARIES=${OPENGL_LIBRARIES}" )


FIND_PACKAGE(GLUT REQUIRED)
MESSAGE(STATUS "GLUT_FOUND=${GLUT_FOUND}")
INCLUDE_DIRECTORIES(${GLUT_INCLUDE_DIR})
   MESSAGE( STATUS "    GLUT_INCLUDE_DIR=${GLUT_INCLUDE_DIR}" )
   MESSAGE( STATUS "    GLUT_LIBRARIES=${GLUT_LIBRARIES}" )



INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/math)


SET( CHARA_FILES
  ./src/scene.cpp
  ./src/skel.cpp
  ./src/math/Mat4.h
  ./src/math/Vec4.h
  ./src/math/Vec3.h
  ./src/math/Vec2.h
  ./src/math/Quaternion.h 
  ./src/export.h
  ./src/main.cpp
)


ADD_EXECUTABLE( Mocap  ${CHARA_FILES})
TARGET_LINK_LIBRARIES( Mocap  	${OPENGL_LIBRARIES} ${GLUT_LIBRARIES} ${OPEN_NI_LIBRARIES} ${BULLET_LIBRARIES})
SET_TARGET_PROPERTIES( Mocap PROPERTIES DEBUG_POSTFIX _d)
SET_TARGET_PROPERTIES( Mocap PROPERTIES COMPILE_FLAGS -D_CRT_SECURE_NO_WARNINGS)
SET_TARGET_PROPERTIES( Mocap PROPERTIES PROJECT_LABEL _app_Mocap)
SET(TARGET ${TARGET}  Mocap)
MESSAGE(STATUS "Building app MOCAP")
